feat: removed propertie partnerId
